--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,11 +9,16 @@
     color: rgb(139, 223, 139);
 }
 
-.Navlinks {
+.Header a {
+    text-decoration: none;
+    color: rgb(139, 223, 139);
+}
+
+.NavLinks {
     list-style: none;
     display: flex;
 }
 
-.Navlinks li {
+.NavLinks li {
     margin-right: 20px;
 }
