--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,22 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+
+* {
   box-sizing: border-box;
   margin: 0;
+  font-family: 'Architects Daughter', cursive;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color:white;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -25,4 +29,91 @@ code {
 }
 .Page > h1 {
   margin-bottom: 50px;
+}
+
+.dietPage {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2%;
+}
+
+.diets {
+  display: flex;
+  flex: row;
+  flex-wrap: wrap;
+}
+
+.dietCard {
+  width: 400px;
+  border: 2px solid black;
+  border-radius: 5px;
+  padding: 10px 20px;
+}
+.entry {
+  border: 1px solid rgba(0, 0, 0, 0.308);
+  border-radius: 2px;
+  padding: 10px 20px;
+}
+.dietPage button {
+  border-radius: 2px;
+  border: 0.5px solid grey;
+  box-shadow: 2px 2px 2px grey;
+  margin: 2px;
+  padding: 2px;
+  width: 100px;
+}
+.add {
+  background: white;
+  width: 100px;
+}
+.edit {
+  background: rgb(16, 131, 16);
+  text-decoration: none;
+}
+.edit > a {
+  color: white;
+}
+.delete {
+  background: red;
+}
+
+.inputFlex {
+  display: flex;
+}
+
+.inputFlex .input {
+  display: block;
+  padding: 3px;
+}
+
+.dietForm p {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+main {
+  background-image: url('https://d3idks24kkd2lv.cloudfront.net/wp-content/uploads/2017/08/ThinkstockPhotos-511930406.jpg');
+  background-color: blue;
+  width: 100%;
+}
+
+#title2 {
+  color:white;
+  position: fixed;
+  left: 150px;
+  bottom: 400px;
+  top: 200px;
+  font-size: 50px;
+}
+
+p2 {
+  color:white;
+  width: 500px;
+  font-size: 25px;
+  top: 300px;
+  bottom: 300px;
+  position: fixed;
+  left:150px;
 }
